# enfinyte

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  test_grpc_queries.py  typos.toml
crates/umem_ai/: Cargo.toml
crates/umem_ai/src/: lib.rs  utils.rs
crates/umem_ai/src/model_impl/: embedding_model.rs  language_model.rs  mod.rs  reranking_model.rs
crates/umem_ai/src/models/: embedding.rs  language.rs  mod.rs  reranking.rs
crates/umem_ai/src/provider_configs/: amazon_bedrock.rs  anthropic.rs  azure_openai.rs  google_vertex.rs  mod.rs  openai.rs  xai.rs
crates/umem_ai/src/providers/: amazon_bedrock.rs  anthropic.rs  azure_openai.rs  cohere.rs  google_vertex.rs  mod.rs  openai.rs  xai.rs
crates/umem_ai/src/response_generators/: embed.rs  generate_object.rs  generate_text.rs  messages.rs  mod.rs  rerank.rs  structured_rerank.rs
crates/umem_allocator/: Cargo.toml
crates/umem_annotations/: Cargo.toml
crates/umem_annotations/src/: lib.rs
crates/umem_config/: Cargo.toml
crates/umem_config/src/: lib.rs
crates/umem_controller/: Cargo.toml
crates/umem_controller/src/: builders.rs  create_memory.rs  create_memory_request.rs  delete_memory.rs  get_memory.rs  lib.rs  list_memory.rs  search_memory.rs  update_memory.rs  update_memory_request.rs
crates/umem_core/: Cargo.toml
crates/umem_core/src/: credence.rs  lib.rs  lifecycle_state.rs  memory_content.rs  memory_context.rs  memory_kind.rs  memory_signals.rs  provenance.rs  query.rs  temporal_metadata.rs
crates/umem_core/src/memory/: credence.rs  lifecycle_state.rs  memory_content.rs  memory_context.rs  memory_kind.rs  mod.rs  provenance.rs  query.rs
crates/umem_doc_parser/: Cargo.toml
crates/umem_doc_parser/src/: lib.rs
crates/umem_embed_engine/: Cargo.toml
crates/umem_embed_engine/src/: cli.rs  client.rs  data_formatter.rs  data_type.rs  engine.rs  lib.rs
crates/umem_embed_engine/src/chunkers/: mod.rs  pdf_chunker.rs
crates/umem_embed_engine/src/config/: add_config.rs  chunker_config.rs  engine_config.rs  loader_config.rs  mod.rs
crates/umem_embed_engine/src/config/llm/: mod.rs  providers.rs
crates/umem_embed_engine/src/config/llm/providers/: amazon_bedrock.rs  anthropic.rs  azure_openai.rs  google_vertex.rs  mod.rs  openai.rs  xai.rs
crates/umem_embed_engine/src/loaders/: mod.rs  pdf_loader.rs
crates/umem_embed_engine/src/utils/: clean_string.rs  mod.rs
crates/umem_embed_engine/src/vectordb/: mod.rs
crates/umem_embeddings/: Cargo.toml
crates/umem_embeddings/src/: cf_baai_bge_m3.rs  cloudflare.rs  lib.rs
crates/umem_grpc_server/: Cargo.toml
crates/umem_grpc_server/src/: lib.rs  service.rs
crates/umem_mcp/: Cargo.toml
crates/umem_mcp/src/: lib.rs  service.rs  token.rs
crates/umem_memory_machine/: Cargo.toml
crates/umem_memory_machine/src/: lib.rs
crates/umem_proto/: Cargo.toml  build.rs
crates/umem_proto/proto/: memory.proto
crates/umem_proto/src/: lib.rs  memory_v1.rs
crates/umem_proto_generated/proto/: memory.proto
crates/umem_refine/: Cargo.toml
crates/umem_refine/src/: lib.rs  main.rs
crates/umem_refine/src/tantivy_tokenizer/: lower_caser.rs  mod.rs  text_analyzer.rs
crates/umem_rerank/: Cargo.toml
crates/umem_rerank/src/: cohere.rs  lib.rs  pinecone.rs
crates/umem_rerank/umem_rerank_derive/: Cargo.toml
crates/umem_rerank/umem_rerank_derive/src/: lib.rs
crates/umem_summarizer/: Cargo.toml
crates/umem_utils/: Cargo.toml
crates/umem_vector/src/: qdrant.rs
crates/umem_vector_store/: Cargo.toml  roadmap.md
crates/umem_vector_store/src/: lib.rs  pgvector.rs  qdrant.rs
crates/umem_web_scrapper/: Cargo.toml
crates/umem_web_scrapper/src/: lib.rs
data_chatgpt/: clean.sh
docs/: guidelines.md
src/: lib.rs  main.rs  tracing.rs
src/memory_machine/: base.rs  flex.rs  mod.rs
