[package]
name = "umem"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
umem_core = {path = "crates/umem_core"}
umem_vector_store = {path = "crates/umem_vector_store"}
umem_config = {path = "crates/umem_config"}
umem_embeddings = {path = "crates/umem_embeddings"}
umem_grpc_server = {path = "crates/umem_grpc_server"}
umem_web_scrapper = {path = "crates/umem_web_scrapper"}
umem_proto = {path = "crates/umem_proto"}
umem_controller = {path = "crates/umem_controller"}
umem_mcp = {path = "crates/umem_mcp"}
anyhow = "1.0.98"
tokio = { version = "1.45.1", features = ["macros","rt-multi-thread","rt", "signal"] }
serde_json = "1.0.140"
lazy_static = "1.5.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
rmcp = { version = "0.3.0", features = ["server", "macros", "transport-io", "transport-streamable-http-server", "transport-worker", "transport-sse-server"]}
chrono = "0.4.41"
uuid = { version = "1.17.0", features = ["v4"] }
tracing-subscriber = {version="0.3.19", features = ["env-filter", "fmt", "chrono"]}
tracing = "0.1.41"
tracing-appender = "0.2.3"
dirs = "6.0.0"
qdrant-client = "1.14.0"
rustc-hash = "2.1.1"
async-trait = "0.1.89"
config = "0.15.19"
sqlx = { version =  "0.8.6" , features = [ "postgres", "uuid", "runtime-tokio", "tls-native-tls" ]}
thiserror = "2.0.17"
typed-builder = "0.23.2"

[dependencies]
umem_grpc_server = { workspace = true }
umem_mcp = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
dirs = { workspace = true }
dotenv = { version = "0.15.0" }
