[package]
name = "umem_ai"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
backon = {version="1.6.0", features=["tokio-sleep"]}
base64 = "0.22.1"
lazy_static.workspace = true
mime = "0.3.17"
reqwest.workspace = true
rustc-hash.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
typed-builder.workspace = true
umem_config = {workspace = true}
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1.120.0"
aws-smithy-types = "1.3.5"
