[package]
name = "umem_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = { workspace = true }
umem_vector_store = { workspace = true}
umem_embeddings = { workspace = true}
umem_proto = { workspace = true}
anyhow = { workspace = true }
chrono = {workspace = true }
uuid = { workspace = true }
rustc-hash = { workspace = true }
