[package]
name = "umem_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = { workspace = true }
umem_vector_store = { workspace = true}
umem_ai = { workspace = true}
umem_refine = { workspace = true}
umem_annotations = { workspace = true}
umem_core = { workspace = true}
anyhow = { workspace = true }
chrono = {workspace = true }
futures = {workspace = true }
tracing = {workspace = true }
tokio = {workspace = true }
uuid = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }
