[package]
name = "umem_embed_engine"
version = "0.1.0"
edition = "2024"

[lib]
name = "umem_embed_engine_core"
path = "src/lib.rs"

[[bin]]
name = "umem_embed_engine_cli"
path = "src/cli.rs"

[dependencies]
ada-url = "3.3.0"
anyhow.workspace = true
async-trait = "0.1.89"
blake3 = "1.8.2"
lazy_static.workspace = true
lopdf = "0.38.0"
regex = "1.12.2"
reqwest.workspace = true
rustc-hash = { version = "2.1" }
serde.workspace = true
serde_json.workspace = true
text-splitter = {version= "0.28.0", features= ["tiktoken-rs"]}
tiktoken-rs = "0.7.0"
yaml-rust2 = { workspace = true }
