[package]
name = "umem_embeddings"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
tokio = { workspace = true }
lazy_static = { workspace = true }
umem_config = { workspace = true }
async-trait = { workspace = true }
