[package]
name = "umem_mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {workspace = true}
umem_controller = { workspace = true }
umem_config = { workspace = true }
serde = {workspace = true }
tokio = { workspace = true }
rmcp = {workspace = true, features=["auth"] }
axum = {version="0.8.4", features=["macros"]}
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde_json = {workspace= true}
tokio-util = { version = "0.7", features = ["codec"] }
reqwest = { workspace = true}
jsonwebtoken = "9.3.1"
tracing = { workspace = true }

[dev-dependencies]
