[package]
name = "umem_memory_machine"
version = "0.1.0"
edition = "2021"

[dependencies]
umem_embeddings = { workspace = true }
umem_controller = { workspace = true }
umem_vector_store = { workspace = true }
umem_rerank = { workspace = true }
umem_ai = { workspace = true }
typed-builder = { workspace = true }
