[package]
name = "umem_memory_machine"
version = "0.1.0"
edition = "2021"

[dependencies]
umem_embeddings = { workspace = true }
umem_controller = { workspace = true }
umem_vector_store = { workspace = true }
umem_config = { workspace = true }
umem_grpc_server = { workspace = true }
umem_ai = { workspace = true }
umem_mcp = { workspace = true }
typed-builder = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
