[package]
name = "umem_proto"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.12" }
prost = { version = "0.13" }
serde = { workspace = true }
serde_json = { workspace = true }
rmcp = { workspace = true }
umem_utils = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
qdrant-client = {workspace = true}

[build-dependencies]
rmcp = { workspace = true }
tonic-build = "0.12"
