[package]
name = "umem_rerank"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }
umem_core = { workspace = true }
umem_config = { workspace = true }
tokio = { workspace = true }
umem_rerank_derive = { path = "./umem_rerank_derive" }
